<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/home"
        android:enabled="true"
        android:icon="@drawable/baseline_local_fire_department_24"
            android:title="@string/trending"/>
    <item
        android:id="@+id/category"
        android:enabled="true"
        android:icon="@drawable/baseline_category_24"
        android:title="@string/category"/>
    <item
        android:id="@+id/fav"
        android:enabled="true"
        android:icon="@drawable/baseline_favorite_24"
        android:title="@string/fav"/>
    <item
        android:id="@+id/downloads"
        android:enabled="true"
        android:icon="@drawable/baseline_download_24"
        android:title="@string/downloads"/>
    <item
        android:id="@+id/settings"
        android:enabled="true"
        android:icon="@drawable/baseline_settings_24"
        android:title="@string/settings"/>
</menu>